--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,19 @@
     "@typescript-eslint/no-this-alias": "error",
     "@typescript-eslint/no-var-requires": "error",
     "@typescript-eslint/triple-slash-reference": "error",
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/typedef": [
+      "error",
+      {
+        "arrayDestructuring": true,
+        "arrowParameter": true,
+        "memberVariableDeclaration": true,
+        "objectDestructuring": true,
+        "parameter": true,
+        "propertyDeclaration": true,
+        "variableDeclaration": true
+      }
+    ],
 
     "import/order": [
       "error",
