chore: added prettier for formatting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,14 @@
 {
-  "plugins": [
-    "@typescript-eslint",
-    "import"
-  ],
+  "root": true,
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "next/core-web-vitals",
     "airbnb",
     "airbnb-typescript",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:@typescript-eslint/strict"
+    "plugin:@typescript-eslint/strict",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -41,25 +40,6 @@
         "parameter": true,
         "propertyDeclaration": true,
         "variableDeclaration": true
-      }
-    ],
-
-    "import/order": [
-      "error",
-      {
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        },
-        "newlines-between": "always",
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "parent",
-          "sibling",
-          "index"
-        ]
       }
     ]
   }
