refactor: introduce folder structure based on clean architecture

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/auth/*": ["./src/modules/auth/*"]
     },
     "strictNullChecks": true
   },
