chore: create cli tool to generate folder structure for specified module

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
+    "create-module": "node module-generator.js"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.1",
