--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "create-module": "node module-generator.js"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@headlessui/tailwindcss": "^0.1.3",
+    "@heroicons/react": "^2.0.18",
     "@radix-ui/react-label": "^2.0.1",
     "@sentry/nextjs": "^7.53.1",
     "@types/node": "18.16.0",
@@ -27,6 +30,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "heroicons": "^2.0.18",
     "next": "^13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -40,6 +44,7 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@tailwindcss/forms": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint-config-airbnb": "^19.0.4",
