--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "recoil": "^0.7.7",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
