--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "ignorePatterns": ["/*.config.js", "/*.config.ts", "/*-generator.js"],
+  "ignorePatterns": ["/*.config.js","/*.setup.js", "/*.config.ts", "/*-generator.js", "__tests__/**/*.test.js"],
   "rules": {
     "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
