--- a/package.json
+++ b/package.json
@@ -42,18 +42,19 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/react": "18.0.28",
+    "@types/testing-library__jest-dom": "5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-testing-library": "^5.11.0",
     "husky": "^8.0.0",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/user-event": "14.4.3",
-    "@types/react": "18.0.28",
-    "@types/testing-library__jest-dom": "5.14.5",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "prettier": "^2.8.8"
