--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "jwt-decode": "^3.1.2",
     "next": "^13.4.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
