--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ BACKEND_BASE_URL=http://localhost:8000/api/v1/
 
 NEXTAUTH_SECRET=my_ultra_secure_nextauth_secret
 NEXTAUTH_URL=http://localhost:3000/
+
+NEXT_PUBLIC_SENTRY_DSN=
