--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
     "no-param-reassign": ["error", {"props": false}],
+    "@typescript-eslint/no-misused-promises": "warn",
 
 //    "@typescript-eslint/no-explicit-any": "error",
 //    "@typescript-eslint/no-non-null-assertion": "error",
