--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.0.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@sentry/nextjs": "^7.53.1",
     "@types/node": "18.16.0",
     "@types/react": "18.2.0",
@@ -28,6 +30,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "jwt-decode": "^3.1.2",
+    "lucide-react": "^0.252.0",
     "next": "^13.4.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
