--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,16 +17,16 @@
     "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
 
-//    "@typescript-eslint/no-explicit-any": "error",
-//    "@typescript-eslint/no-non-null-assertion": "error",
-//    "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/no-non-null-assertion": "warn",
+    "@typescript-eslint/explicit-function-return-type": "error",
 ////    "@typescript-eslint/explicit-member-accessibility": "error",
 //    "@typescript-eslint/explicit-module-boundary-types": "error",
-//    "@typescript-eslint/no-empty-interface": "error",
-//    "@typescript-eslint/no-empty-function": "error",
-//    "@typescript-eslint/no-misused-new": "error",
+    "@typescript-eslint/no-empty-interface": "error",
+    "@typescript-eslint/no-empty-function": "error",
+    "@typescript-eslint/no-misused-new": "error",
 //    "@typescript-eslint/no-this-alias": "error",
-//    "@typescript-eslint/no-var-requires": "error",
+    "@typescript-eslint/no-var-requires": "error",
 //    "@typescript-eslint/triple-slash-reference": "error",
 //    "@typescript-eslint/no-inferrable-types": "off",
 //    "@typescript-eslint/typedef": [
