--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "create-module": "node module-generator.js"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
