--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     "no-param-reassign": ["error", {"props": false}],
     "@typescript-eslint/no-misused-promises": "warn",
 
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-non-null-assertion": "warn",
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-empty-interface": "error",
