--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "jotai": "^2.2.2",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.252.0",
     "next": "^13.4.1",
@@ -38,7 +39,6 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.7",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
@@ -47,6 +47,7 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@swc-jotai/react-refresh": "^0.0.8",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint-config-airbnb": "^19.0.4",
