--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "heroicons": "^2.0.18",
-    "next": "^13.4.1",
+    "next": "^13.4.7",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
