--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   "ignorePatterns": ["/*.config.js", "/*.config.ts", "/*-generator.js"],
   "rules": {
     "react/jsx-props-no-spreading": "off",
+    "react/require-default-props": "off",
     "import/prefer-default-export": "off",
     "no-param-reassign": ["error", {"props": false}],
     "@typescript-eslint/no-misused-promises": "warn",
