--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "formik": "^2.4.2",
     "jotai": "^2.2.2",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.262.0",
