--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "sharp": "^0.32.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
