perf: add lock files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env*
 
 # vercel
 .vercel
@@ -38,3 +38,8 @@ next-env.d.ts
 .idea
 # Sentry Auth Token
 .sentryclirc
+
+# lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
