--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
