refactor: renamed screen management module import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./*"],
       "@/auth/*": ["./src/modules/auth/*"],
       "@/screen-management/*": ["./src/modules/screen-management/*"]
+      "@/screens/*": ["./src/modules/screen-management/*"]
     },
     "strictNullChecks": true
   },
