feat(role-management): update create role form to facilitate editing as well

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/auth/*": ["./src/modules/auth/*"],
-      "@/screen-management/*": ["./src/modules/screen-management/*"]
+      "@/roles/*": ["./src/modules/role-management/*"],
       "@/screens/*": ["./src/modules/screen-management/*"]
     },
     "strictNullChecks": true
