--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "cmdk": "^0.2.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "jotai": "^2.2.3",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.263.1",
     "next": "^13.4.12",
