--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,8 +20,8 @@
     "react/require-default-props": "off",
     "import/prefer-default-export": "off",
     "no-param-reassign": ["error", {"props": false}],
-    "@typescript-eslint/no-misused-promises": "warn",
 
+    "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-non-null-assertion": "warn",
