fix: some config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 BACKEND_BASE_URL=http://localhost:8000/api/v1/
 BACKEND_PROJECT_NAME=soa_poc
+BACKEND_AUTH_MANAGEMENT="auth-management"
 NEXTAUTH_SECRET=my_ultra_secure_nextauth_secret
 NEXTAUTH_URL=http://localhost:3000/
 
