--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.40",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
@@ -85,5 +85,6 @@
     "eslint-plugin-filenames": "^1.3.2",
     "husky": "^8.0.3",
     "prettier": "^3.2.5"
-  }
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
