--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
   "root": true,
-  "plugins": ["@typescript-eslint", "filenames"],
+  "plugins": [
+    "@typescript-eslint",
+    "filenames"
+  ],
   "extends": [
     "next/core-web-vitals",
     "airbnb",
@@ -14,13 +17,21 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "ignorePatterns": ["/*.config.js", "/*.config.ts", "/*-generator.js"],
+  "ignorePatterns": [
+    "/*.config.js",
+    "/*.config.ts",
+    "/*-generator.js"
+  ],
   "rules": {
     "react/jsx-props-no-spreading": "off",
     "react/require-default-props": "off",
     "import/prefer-default-export": "off",
-    "no-param-reassign": ["error", {"props": false}],
-
+    "no-param-reassign": [
+      "error",
+      {
+        "props": false
+      }
+    ],
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "error",
@@ -29,8 +40,8 @@
     "@typescript-eslint/no-empty-interface": "error",
     "@typescript-eslint/no-empty-function": "error",
     "@typescript-eslint/no-misused-new": "error",
-    "@typescript-eslint/no-var-requires": "error",
+    "@typescript-eslint/no-var-requires": "error"
 
-    "filenames/match-regex": [2, "^[a-z]+(-[a-z]+)*(.d)?$", true]
+    //    "filenames/match-regex": [2, "^[a-z]+(-[a-z]+)*(.d)?$", true]
   }
 }
