--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ NEXTAUTH_URL=http://localhost:3000/
 NEXT_PUBLIC_REDIRECT_URL=/profile
 NEXT_PUBLIC_LOGIN_URL=/login
 NEXT_PUBLIC_SENTRY_DSN=
-AUTH_GITHUB_ID
-AUTH_GITHUB_SECRET
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
+AUTH_TWITTER_ID=
+AUTH_TWITTER_SECRET=
+AUTH_SECRET="changeMe"
+
 
