--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@sentry/nextjs": "^8.30.0",
+    "@sentry/nextjs": "^8.32.0",
     "@tanstack/react-table": "^8.20.5",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -58,7 +59,6 @@
     "jotai": "^2.10.0",
     "lucide-react": "^0.439.0",
     "next": "^14.2.13",
-    "next-auth": "5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "nextjs": "^0.0.3",
     "postcss": "^8.4.47",
@@ -66,6 +66,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.10",
     "tailwindcss-animate": "^1.0.7",
@@ -80,15 +81,15 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "8.46.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "14.2.8",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.1.6",
-    "prettier": "^3.3.3",
-    "eslint": "8.46.0",
-    "eslint-config-next": "14.2.8"
+    "prettier": "^3.3.3"
   },
   "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
